# loan_analysis

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: analysis.ipynb  catboost.ipynb
util/: __init__.py
