[project]
name = "loan-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.25.2",
    "seaborn>=0.13.2",
    "great-tables>=0.17.0",
    "ipykernel>=6.29.5",
    "scipy>=1.15.2",
    "pyarrow>=19.0.1",
    "catboost>=1.2.7",
    "scikit-learn>=1.6.1",
    "numpy>=1.26.4",
    "ipywidgets>=8.1.5",
    "shap>=0.47.0",
    "matplotlib>=3.10.1",
]
